--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -53,14 +53,14 @@ enable_materialized_views: true
 enable_drop_compact_storage: true
 file_cache_enabled: true
 auto_hints_cleanup_enabled: true
-track_warnings:
+guardrails:
     enabled: true
     coordinator_read_size:
-        warn_threshold_kb: 1024
-        abort_threshold_kb: 4096
+        warn_threshold_in_kb: 1024
+        abort_threshold_in_kb: 4096
     local_read_size:
-        warn_threshold_kb: 4096
-        abort_threshold_kb: 8192
+        warn_threshold_in_kb: 4096
+        abort_threshold_in_kb: 8192
     row_index_size:
-        warn_threshold_kb: 4096
-        abort_threshold_kb: 8192
+        warn_threshold_in_kb: 4096
+        abort_threshold_in_kb: 8192
