TRASH COMMIT fix circle custom config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -607,7 +607,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -702,7 +702,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -797,7 +797,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -893,7 +893,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -989,7 +989,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1085,7 +1085,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1180,7 +1180,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1324,7 +1324,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1447,7 +1447,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1542,7 +1542,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1641,7 +1641,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1718,7 +1718,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1794,7 +1794,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1857,7 +1857,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -1966,7 +1966,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2075,7 +2075,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2174,7 +2174,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2270,7 +2270,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2325,7 +2325,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2501,7 +2501,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2578,7 +2578,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2673,7 +2673,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2783,7 +2783,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2881,7 +2881,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -2976,7 +2976,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3071,7 +3071,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3134,7 +3134,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3243,7 +3243,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3297,7 +3297,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3360,7 +3360,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3458,7 +3458,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3568,7 +3568,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3743,7 +3743,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
@@ -3838,7 +3838,7 @@ jobs:
     - CASS_DRIVER_NO_EXTENSIONS: true
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
-- DTEST_REPO: https:////github.com/ekaterinadimitrova2/cassandra-dtest.git
+    - DTEST_REPO: https://github.com/ekaterinadimitrova2/cassandra-dtest.git
     - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
