--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -955,7 +955,7 @@ sstable_preemptive_open_interval: 50MiB
 # Throttles entire SSTable file streaming between datacenters.
 # Setting this value to 0 disables throttling for entire SSTable inter-DC file streaming.
 # When unset, the default is 200 Mbps or approximately 25 MiB/s.
-# entire_sstable_inter_dc_stream_throughput_outbound 25MiB/s
+# entire_sstable_inter_dc_stream_throughput_outbound: 25MiB/s
 
 # Throttles all outbound streaming file transfers on this node to the
 # given total throughput in Mbps. This is necessary because Cassandra does
